--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-  body {
+  .login {
     margin: 0;
     font-family: 'Inter', sans-serif;
     background: #091349;
@@ -155,4 +155,5 @@
     display: flex;
     gap: 8px;
   }
+
 
